--- a/package.json
+++ b/package.json
@@ -5,20 +5,33 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.24.63",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "gatsby": "^2.24.80",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-sass": "^2.3.17",
     "gatsby-plugin-sharp": "^2.6.36",
-    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-react-router-scroll": "^3.0.15",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-source-instagram": "^0.9.0",
+    "gatsby-source-sanity": "^6.0.4",
+    "gatsby-source-shopify": "^3.2.37",
     "gatsby-transformer-sharp": "^2.5.15",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "shopify-buy": "^2.11.0",
+    "uikit": "^3.5.9"
   },
   "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.21.4",
     "prettier": "2.1.1"
   },
   "keywords": [
