--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "@sanity/block-content-to-react": "^2.0.7",
     "gatsby": "^2.27.4",
     "gatsby-background-image": "^1.3.1",
+    "gatsby-cli": "^2.19.2",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-offline": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
-    "gatsby-plugin-sass": "^2.6.0",
+    "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-react-router-scroll": "^3.2.0",
     "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-source-instagram": "^0.9.0",
     "gatsby-source-sanity": "^6.0.4",
-    "gatsby-source-shopify": "^3.5.1",
+    "gatsby-source-shopify": "^3.10.1",
     "gatsby-transformer-sharp": "^2.7.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.21.5",
-    "prettier": "2.1.1"
+    "prettier": "^2.1.1"
   },
   "keywords": [
     "gatsby"
