--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@sanity/block-content-to-react": "^2.0.7",
     "gatsby": "^2.32.9",
     "gatsby-background-image": "^1.3.1",
     "gatsby-cli": "^2.19.2",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.9.1",
+    "gatsby-plugin-social9-socialshare": "^1.0.4",
     "gatsby-react-router-scroll": "^3.7.0",
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-source-sanity": "^6.0.4",
@@ -26,6 +32,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-share": "^4.4.0",
     "shopify-buy": "^2.11.0",
     "uikit": "^3.5.10"
   },
